Update test execution & minor changes elsewhere